<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".Registro">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#DBFFFFFF"
        app:cardCornerRadius="50dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/regsiterlayout"
            android:layout_width="387dp"
            android:layout_height="709dp">


            <EditText
                android:id="@+id/registerNombre"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="95dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="95dp"
                android:autofillHints="text"
                android:background="@drawable/edittextesqredond"
                android:fontFamily="@font/allproyectfont"
                android:hint="@string/registerNombre"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#e3e1e1"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/registerApelldio2"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="95dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="95dp"
                android:autofillHints="text"
                android:background="@drawable/edittextesqredond"
                android:fontFamily="@font/allproyectfont"
                android:hint="@string/registerSegundoApellido"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#e3e1e1"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerApelldio1" />

            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="95dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="95dp"
                android:autofillHints="text"
                android:background="@drawable/edittextesqredond"
                android:fontFamily="@font/allproyectfont"
                android:hint="@string/registerEmail"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#e3e1e1"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerApelldio2" />

            <EditText
                android:id="@+id/registerContrasenha"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="95dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="95dp"
                android:autofillHints="text"
                android:background="@drawable/edittextesqredond"
                android:fontFamily="@font/allproyectfont"
                android:hint="@string/contrasenha"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#e3e1e1"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerEmail" />

            <EditText
                android:id="@+id/registerDirrecion"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="95dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="95dp"
                android:autofillHints="text"
                android:background="@drawable/edittextesqredond"
                android:fontFamily="@font/allproyectfont"
                android:hint="@string/registerDireccion"
                android:inputType="textPostalAddress"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#e3e1e1"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerContrasenha" />

            <EditText
                android:id="@+id/registerCP"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="95dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="95dp"
                android:autofillHints="text"
                android:background="@drawable/edittextesqredond"
                android:fontFamily="@font/allproyectfont"
                android:hint="@string/registerCodigoPostal"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#e3e1e1"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerDirrecion" />

            <Button
                android:id="@+id/btRegistrar"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginStart="95dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="95dp"
                android:layout_marginBottom="44dp"
                android:backgroundTint="#9a76f5"
                android:fontFamily="@font/allproyectfont"
                android:text="@string/registrarse"
                android:textAlignment="center"
                android:textColor="#e3e1e1"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerCP"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/registerApelldio1"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="95dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="95dp"
                android:autofillHints="text"
                android:background="@drawable/edittextesqredond"
                android:fontFamily="@font/allproyectfont"
                android:hint="@string/registerPrimerApellido"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#e3e1e1"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerNombre" />


            <TextView
                android:id="@+id/textViewEnlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="43dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="43dp"
                android:layout_marginBottom="25dp"
                android:clickable="true"
                android:fontFamily="@font/allproyectfont"
                android:onClick="abrirOtraActividad"
                android:text="@string/registerSiCuenta"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btRegistrarse"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>