<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraintLogin"
        android:background="@drawable/fondo"
        android:orientation="vertical"
        tools:context=".Login">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="342dp"
            android:layout_height="670dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#66FFFFFF"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/loginOpciones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginBottom="579dp"
                    android:src="@drawable/opciones"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/loginLogo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageView
                    android:id="@+id/loginLogo"
                    android:layout_width="195dp"
                    android:layout_height="166dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="100dp"
                    android:src="@drawable/logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.49"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btRegistrarse"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="71dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="71dp"
                    android:layout_marginBottom="79dp"
                    android:backgroundTint="#EB09184D"
                    android:fontFamily="@font/allproyectfont"
                    android:text="@string/registrarse"
                    android:textAlignment="center"
                    android:textColor="#e3e1e1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btInciarSesion"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/btInciarSesion"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="71dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="71dp"
                    android:backgroundTint="#EB09184D"
                    android:fontFamily="@font/allproyectfont"
                    android:text="@string/iniciar_sesion"
                    android:textAlignment="center"
                    android:textColor="#e3e1e1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkboxRecordarEmail" />

                <CheckBox
                    android:id="@+id/checkboxRecordarEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="148dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="86dp"
                    android:fontFamily="@font/allproyectfont"
                    android:text="Recordar email"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginEtContrasenha" />

                <EditText
                    android:id="@+id/loginEtContrasenha"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="70dp"
                    android:autofillHints="password"
                    android:background="@drawable/edittextesqredond"
                    android:fontFamily="@font/allproyectfont"
                    android:hint="@string/contrasenha"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="#e3e1e1"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginEtEmail" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="93dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="94dp"
                    android:fontFamily="@font/raillinc"
                    android:text="ClothesVault"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginLogo" />

                <EditText
                    android:id="@+id/loginEtEmail"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="70dp"
                    android:autofillHints="username"
                    android:background="@drawable/edittextesqredond"
                    android:fontFamily="@font/allproyectfont"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="#e3e1e1"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
